--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyRetrofitApp</string>
     <string name="movie_list">Movie List</string>
+    <string name="movie_title">Movie title :</string>
+    <string name="movie_overview">Overview :</string>
 </resources>
